--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,34 +1,32 @@
 
 
 .hero{
-
+    height: 100vh;
     &__slide{
         height: auto;
         background-repeat: no-repeat;
         background-position: 100% 0;
         background-size:cover;
 
-        padding-top: 34.15vh;
-        padding-bottom: 30.94vh;
+        padding-top: 45vh;
+        padding-bottom: 45vh;
         @media (max-width: 992px) {
             background-position: 60% 0;
     
         }
 
         &--1{
-            background-image: url(../img/hero-main.png);
+            background-image: url(../img/hero/01.jpg);
         }
         &--2{
-            background-image: url(../img/main/10.jpg);
-            @media (max-width: 992px) {
-                background-position: 70% 0;
-        
-            }
+            background-image: url(../img/hero/02.jpg);
+
 
         }
         &--3{
-            background-image: url(../img/main/03.jpg);
+            background-image: url(../img/hero/03.png);
         }
+
     
     }
 
