--- a/source/html/components/header.html
+++ b/source/html/components/header.html
@@ -15,9 +15,9 @@
                         <input type="search" placeholder="Поиск">
                     </div>
                 </div>
-                <div class="header__hidden">
+                <div class="header__hidden" id="hidden-menu">
                     <ul class="header__nav">
-                        <li class="header__nav-item">
+                        <li class="header__nav-item catalog">
                             <a href="#" class="header__nav-link">Каталог</a>
                         </li>
                         <li class="header__nav-item">
@@ -38,9 +38,160 @@
                     </ul>
                 </div>
 
-            </div>
-        </div>
+                <div class="header__menu center">
+                    <div class="header__menu-inner">
+                        <ul class="header__menu-list">
+            
+                            <li class="header__menu-item">
+                                <a class="header__menu-title" href="#">Электрика</a>
+                                <ul class="header__menu-sublist">
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                </ul>
+                            </li>
+            
+                            <li class="header__menu-item">
+                                <a class="header__menu-title" href="#">Рулонная&nbsp;гидроизоляция</a>
+                                <ul class="header__menu-sublist">
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                </ul>
+                            </li>
+            
+                            <li class="header__menu-item">
+                                <a class="header__menu-title" href="#">Строительные&nbsp;смеси</a>
+                                <ul class="header__menu-sublist">
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                </ul>
+                            </li>
+            
+                            <li class="header__menu-item">
+                                <a class="header__menu-title" href="#">Цемент</a>
+                                <ul class="header__menu-sublist">
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                    <li class="header__menu-subitem">
+                                        <a class="header__menu-link" href="#">Подкатегория</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
+            </div>
+            
+        </div>
     </div>
 
 </header>
