--- a/source/sass/blocks/buttons.scss
+++ b/source/sass/blocks/buttons.scss
@@ -1,28 +1,22 @@
 .button{
-    margin-top: 63px;
     width: 197px;
     height: 51px;
     border-radius: 5px;
     background: #FDFDFD;
     position: relative;
-    box-shadow: (0px 0px 50px rgba(0, 0, 0, 0.15));
+    box-shadow: $Big;
 
-    .tooltip{
-        right: 32%;
-        
-    }
+
     &__btn{
         font-size: 16px;
         font-weight: 600;
         transition: 0.5s ease;
-        span{
-            margin-left: 10px;
-        }
+
     }
     &__btn:hover,
     &__btn:focus,
     &__btn:active{
-        color: $Orange;
+        color: $Yellow;
         transition: 0.5s ease;
 
     }
