--- a/source/sass/blocks/job.scss
+++ b/source/sass/blocks/job.scss
@@ -39,7 +39,7 @@
             position: absolute;
             width: 5px;
             height: 5px;
-            background: $Orange;
+            background: $Yellow;
             border-radius:100%;
             left: 0;
             top: 7px;
