--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -10,12 +10,13 @@ $Bold: 700;
 //colors
 $Black: #000;
 $White: #ffffff;
-$Gray: #1D2237;
-$White-gray: #FDFDFD;
-$Medium-gray: #505D68;
-$Lite-gray: #7C7C7C;
-$Dark-gray: #222;
-$FootGray: #898989;
-$Orange: #FF8218;
-$Dark-orange: #F77C14;
+$Lite-gray: #666;
+$Dark-gray: #333;
+$Yellow: #ffd300;
+
+//shadow
+
+$Big: 0px 0px 50px rgba(0, 0, 0, 0.15);
+$Little: 0px 0px 15px rgba(0, 0, 0, 0.15);
+
 
