--- a/source/html/components/footer.html
+++ b/source/html/components/footer.html
@@ -4,41 +4,14 @@
 
         <div class="footer__inner">
 
-            <div class="footer__content">
                 <div class="footer__image">
-                    <img src="assets/img/logo-footer.svg" alt="logo">
-                </div>
-                <div class="footer__buttons">
-                    <div class="footer__btn footer__btn--active" data-tabs-handler="orsha">Орша</div>
-                    <div class="footer__btn" data-tabs-handler="tolochin">Толочин</div>
-                </div>
-                <div class="footer__lists">
-                    <ul class="footer__list">
-                        <li class="footer__item"><a class="footer__link" href="#">Для организаций</a></li>
-                        <li class="footer__item"><a class="footer__link" href="job.html">Вакансии</a></li>
-                        <li class="footer__item"><a class="footer__link" href="#">Ассортимент</a></li>
-                    </ul>
-                    <ul class="footer__list">
-                        <li class="footer__item"><a class="footer__link" href="#">FAQ</a></li>
-                        <li class="footer__item"><a class="footer__link" href="blog.html">Блог</a></li>
-                        <li class="footer__item"><a class="footer__link" href="contacts.html">Контакты</a></li>
-                    </ul>
-
+                    <img src="assets/img/logo.png" alt="logo">
                 </div>
 
-                <div class="footer__right">Все права защищены</div>
 
-            </div>
+                <div class="footer__right">ИП “Проводок” УНП: 000000000 © 2022 Все права защищены</div>
 
 
-            <div class="footer__map">
-                <div class="footer__map-inner" data-tabs-field="orsha">
-                    <iframe class="map-color" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab89611bae278798e43c7f1f23f0ace3f091bce32c86f37817a38d799c89eec4f&amp;source=constructor" width="100%" height="430" frameborder="0"></iframe>   
-                </div>
-                <div class="footer__map-inner hidden" data-tabs-field="tolochin" >
-                    <iframe class="map-color" src="https://yandex.ru/map-widget/v1/?um=constructor%3A7705ccc6ce91da3f1f08561c042bdb25ab261e64b14949c0914b36ba28a31077&amp;source=constructor" width="100%" height="430" frameborder="0"></iframe>
-                </div>
-            </div>
         </div>
 
     </div>
