--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -17,13 +17,13 @@
         &:hover,
         &:focus,
         &:active{
-            color: $Orange;
+            color: $Yellow;
         }
 
         &:hover::before{
             content: '';
             height: 2px;
-            background: $Orange;
+            background: $Yellow;
             display: block;
             position: absolute;
             bottom: 0;
@@ -32,14 +32,14 @@
             animation-fill-mode: forwards;
         }
         &--active{
-            color: $Orange;
+            color: $Yellow;
             text-shadow: 0px 0px 30px rgba(247, 124, 20, 0.5);
             position: relative;
 
             &::before{
                 content: '';
                 height: 2px;
-                background: $Orange;
+                background: $Yellow;
                 display: block;
                 position: absolute;
                 bottom: 0;
