--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -84,11 +84,17 @@
 
         }
     }
+    &__cards{
+        width: 100%;
+    }
     &__cards-inner{
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        gap: 30px;
+        gap: 30px 0;
+        
     }
+
+  
     &__card:hover{
         box-shadow: $Little;
     }
