--- a/source/html/components/header.html
+++ b/source/html/components/header.html
@@ -24,14 +24,18 @@
                     </div>
 
                 </div>
-                <div class="header__hidden" >
+                <div class="header__hidden " >
                     <ul class="header__nav">
                         <li class="header__nav-item catalog">
                             <a href="#" class="header__nav-link">Каталог</a>
                         </li>
 
+                        <li class="header__nav-item mob-catalog">
+                            <a href="assortment.html" class="header__nav-link">Каталог</a>
+                        </li>
+
                         <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">Статьи</a>
+                            <a href="blog.html" class="header__nav-link">Статьи</a>
                         </li>
                         <li class="header__nav-item">
                             <a href="#" class="header__nav-link">Видео</a>
@@ -53,7 +57,7 @@
                         <ul class="header__menu-list">
             
                             <li class="header__menu-item">
-                                <a class="header__menu-title" href="#">Электрика</a>
+                                <a class="header__menu-title" href="assortment.html">Электрика</a>
                                 <ul class="header__menu-sublist">
                                     <li class="header__menu-subitem">
                                         <a class="header__menu-link" href="#">Подкатегория</a>
@@ -89,7 +93,7 @@
                             </li>
             
                             <li class="header__menu-item">
-                                <a class="header__menu-title" href="#">Рулонная&nbsp;гидроизоляция</a>
+                                <a class="header__menu-title" href="assortment.html">Рулонная&nbsp;гидроизоляция</a>
                                 <ul class="header__menu-sublist">
                                     <li class="header__menu-subitem">
                                         <a class="header__menu-link" href="#">Подкатегория</a>
@@ -125,7 +129,7 @@
                             </li>
             
                             <li class="header__menu-item">
-                                <a class="header__menu-title" href="#">Строительные&nbsp;смеси</a>
+                                <a class="header__menu-title" href="assortment.html">Строительные&nbsp;смеси</a>
                                 <ul class="header__menu-sublist">
                                     <li class="header__menu-subitem">
                                         <a class="header__menu-link" href="#">Подкатегория</a>
@@ -161,7 +165,7 @@
                             </li>
             
                             <li class="header__menu-item">
-                                <a class="header__menu-title" href="#">Цемент</a>
+                                <a class="header__menu-title" href="assortment.html">Цемент</a>
                                 <ul class="header__menu-sublist">
                                     <li class="header__menu-subitem">
                                         <a class="header__menu-link" href="#">Подкатегория</a>
