--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -1,120 +1,152 @@
+
 .hero2{
     height: 300px;
-    background-image: url(../img/hero2.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    @media (max-width:1200px) {
-        background-position: center top;
-    }
-    @media (max-width:450px) {
-        height: 250px;
-    }
+    background-image: url(../img/hero/01.jpg);
+    background-size:cover;
 }
-
 
 
 .breadcrumbs{
-    padding-top: 168px;
-    h2::after{
-        display: none;
-    }
-    &__title{
-        font-weight: bold;
-        margin-bottom: 10px;
-        color: #fff;
+    padding-top: 250px;
 
-    }
-    &__list{
-        display: flex;
-    }
-    &__item{
-        font-size: 14px;
-        font-weight: 300;
-        opacity: 0.9;
-        color: #fff;
+    &__link{
+        font-size: 16px;
+        font-weight: $Bold;
+        color: $White;
+        position: relative;
+        
         padding-right: 10px;
         margin-right: 5px;
         position: relative;
-        &:not(:last-of-type)::after{
-            content: '/';
-            position: absolute;
-            display: block;
-            top: 0;
-            right: 0px;
-            font-size: 13px;
-        }
-    }
-}
-
-.blog-bts{
-    margin-top: 40px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    cursor: pointer;
-    &__button{
-        width: 220px;
-        height: 50px;
-        font-weight: bold;
-        text-transform: uppercase;
-        transition: 0.5s ease;
-        box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.15);
-        &:hover,
-        &:active,
-        &:focus,
-        &:active{
-            color: $Yellow;
-
+        &--main{
+            &::before{
+                content: '';
+                position: absolute;
+                display: block;
+                right: 0;
+                left: 0px;
+                bottom: -5px;
+                width: 86%;
+                height: 2px;
+                background-color: $Yellow;
+            }
         }
 
     }
+    
+    &__link:not(:last-of-type)::after{
+        content: '/';
+        position: absolute;
+        display: block;
+        top: -2px;
+        right: 0px;
+        font-size: 13px;
 
-    &__button--active{
-        color: $Yellow;
-        transition: 0.5s ease;
     }
-
-    @media (max-width:1200px) {
-        justify-content: center;
-        gap: 20px;
+    &__link:last-of-type{
+        pointer-events: none;
+        cursor: default;
     }
 
 }
 
-.articles{
+.blog{
     margin-top: 100px;
-    &__list{
+    &__cards{
+        margin-top: 60px;
+    }
+    &__card{
+        background-color:rgba(249, 232, 152, 0.3);
+        border-radius: 5px;
+        &:hover{
+            box-shadow:$Big;
+
+        }
+    }
+    &__card:not(:last-of-type){
+        margin-bottom: 40px;
+    }
+    &__card-inner{
+        padding: 28px;
         display: flex;
         justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 30px 0;
-
-        &.hidden{
-            display: none;
-        }
-
     }
-    &__item{
-        width: 32%;
+    &__card-content{
+        width: 80%;
+    }
+    &__card-title{
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+    &__card-text{
+        -ms-text-overflow: ellipsis;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        -ms-line-clamp: 5;
+        -webkit-line-clamp: 5;
+        line-clamp: 5;
+        display: -webkit-box;
+        word-wrap: break-word;
+        -webkit-box-orient: vertical;
+        box-orient: vertical;
+    }
+
+    &__card-image{
+        width: 230px;
+        margin-left: 20px;
+    }
+
+    &__card-link{
+        margin-top: 70px;
+        display: block;
+        font-weight: $Bold;
     }
 
     @media (max-width:992px) {
-
-        &__item{
-            width: 48%;
+        &__card-link{
+            margin-top: 40px;
         }
-       
     }
-
-    @media (max-width:576px) {
-
+    @media (max-width:768px) {
         margin-top: 60px;
-
-        &__item{
-            width: 100%;
+        &__cards{
+            margin-top: 40px;
         }
-       
+        &__card-link{
+            margin-top: 20px;
+        }
+    }
+    @media (max-width:576px) {
+        &__card-inner{
+            flex-direction: column-reverse;
+            justify-content: center;
+        }
+        &__card-image{
+            margin: 0 auto;
+        }
+        &__card-content{
+            width: 100%;
+            margin-top: 20px;
+        }
+        &__card-text{
+            -ms-line-clamp: 3;
+            -webkit-line-clamp: 3;
+            line-clamp: 3;
+        }
+    }
+    @media (max-width:450px){
+        &__card-inner{
+            padding: 15px 10px;
+        }
+        &__card-title{
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+        &__card-text{
+            font-size: 14px;
+        }
     }
 
 }
+
