--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -160,6 +160,10 @@
     display: none;
 }
 
+.mob-catalog{
+    display: none;
+}
+
 @media (max-width:992px) {
     .header__numbers-link{
         margin-left: 15px;
@@ -189,33 +193,60 @@
 }
 
 @media (max-width:768px){
-    .header__numbers{
-        display: none;
+    .header{
+        &__numbers{
+            display: none;
+        }
+        &__search{
+            display: none;
+        }
+        &__visible{
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+        &__image{
+            height: 60px;
+            img{
+                height: 100%;
+            }
+        }
+        &__visible{
+            justify-content: space-between;
+        }
+        &__hidden{
+            transform: translateY(-1000px);
+            width: 100%;
+            opacity: 0.9;
+            box-shadow: $Big;
+
+            &--active{
+                animation: header-down 0.7s ease forwards;
+            }
+        }
+
+        &__nav{
+            flex-direction: column;
+            width: fit-content;
+            margin: 0 auto;
+        }
+        &__nav-item:not(:last-of-type){
+            margin-bottom: 20px;
+        }
     }
-    .header__search{
-        display: none;
-    }
-    .header__hidden{
-        display: none;
-    }
+
+
+
+
+
+
+    
     .catalog{
         display: none;
     }
 
-    .header__visible{
-        padding-left: 10px;
-        padding-right: 10px;
+    .mob-catalog{
+        display: block;
     }
-    .header__image{
-        height: 60px;
-        img{
-            height: 100%;
-        }
-    }
-    .header__visible{
-        justify-content: space-between;
-    }
-
     .hamburger-wrapper{
         display: block;
         border: 1px solid rgba(41, 41, 41, 0.5)
@@ -238,68 +269,81 @@
         justify-content: center; 
     
     }
-        .hamburger:hover {
-          opacity: 0.7; }
-        .hamburger.is-active:hover {
-          opacity: 0.7; }
-        .hamburger.is-active .hamburger-inner,
-        .hamburger.is-active .hamburger-inner::before,
-        .hamburger.is-active .hamburger-inner::after {
-          background-color: #fff; }
-      
-      .hamburger-box {
+    .hamburger:hover {
+        opacity: 0.7; }
+      .hamburger.is-active:hover {
+        opacity: 0.7; }
+      .hamburger.is-active,
+      .hamburger.is-active .hamburger-inner::before,
+      .hamburger.is-active .hamburger-inner::after {
+        background-color: inherit; 
+    }
+    .hamburger-box {
         width: 35px;
         height: 24px;
         display: inline-block;
-        position: relative; }
+        position: relative; 
+    }
       
       .hamburger-inner {
         display: block;
         top: 50%;
-        margin-top: -2px; }
-        .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-          width: 35px;
-          height: 4px;
-          background-color: #fff;
-          border-radius: 4px;
-          position: absolute;
-          transition-property: transform;
-          transition-duration: 0.15s;
-          transition-timing-function: ease; }
-        .hamburger-inner::before, .hamburger-inner::after {
-          content: "";
-          display: block; }
-        .hamburger-inner::before {
-          top: -10px; }
-        .hamburger-inner::after {
-          bottom: -10px; }
+        margin-top: -2px;
+        background-color: #fff;
 
-          .hamburger--collapse .hamburger-inner {
-            top: auto;
-            bottom: 0;
-            transition-duration: 0.13s;
-            transition-delay: 0.13s;
-            transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); }
-            .hamburger--collapse .hamburger-inner::after {
-              top: -20px;
-              transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), opacity 0.1s linear; }
-            .hamburger--collapse .hamburger-inner::before {
-              transition: top 0.12s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19); }
-          
-          .hamburger--collapse.is-active .hamburger-inner {
-            transform: translate3d(0, -10px, 0) rotate(-45deg);
-            transition-delay: 0.22s;
-            transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
-            .hamburger--collapse.is-active .hamburger-inner::after {
-              top: 0;
-              opacity: 0;
-              transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), opacity 0.1s 0.22s linear; }
-            .hamburger--collapse.is-active .hamburger-inner::before {
-              top: 0;
-              transform: rotate(-90deg);
-              transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1); }
+    }
+    .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+        width: 35px;
+        height: 4px;
+        border-radius: 4px;
+        position: absolute;
+        transition-property: transform;
+        transition-duration: 0.15s;
+        transition-timing-function: ease; 
+    }
+      .hamburger-inner::before, .hamburger-inner::after {
+        content: "";
+        display: block;
+        background-color: inherit;
+
+    }
+      .hamburger-inner::before {
+        top: -10px; 
+    }
+      .hamburger-inner::after {
+        bottom: -10px; 
+    }
+    .hamburger--collapse .hamburger-inner {
+        top: auto;
+        bottom: 0;
+        transition-duration: 0.13s;
+        transition-delay: 0.13s;
+        transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); 
+    }
+    .hamburger--collapse .hamburger-inner::after {
+        top: -20px;
+        transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), opacity 0.1s linear; 
+    }
+    .hamburger--collapse .hamburger-inner::before {
+        transition: top 0.12s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19); 
+    }
+
+    .hamburger--collapse.is-active .hamburger-inner {
+        transform: translate3d(0, -10px, 0) rotate(-45deg);
+        transition-delay: 0.22s;
+        transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); 
+    }
+    .hamburger--collapse.is-active .hamburger-inner::after {
+          top: 0;
+          opacity: 0;
+          transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), opacity 0.1s 0.22s linear; 
+    }
+    .hamburger--collapse.is-active .hamburger-inner::before {
+          top: 0;
+          transform: rotate(-90deg);
+          transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1); 
+    }
 
 
 }
-
 
