--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -218,3 +218,169 @@
         font-weight: $Bold;
     }
 }
+
+@media (max-width:1400px) {
+    .assortment{
+        &__cards-inner{
+            grid-template-columns: repeat(4,1fr);
+        }
+    }
+}
+
+@media (max-width:1200px) {
+    .assortment{
+        &__cards-inner{
+            grid-template-columns: repeat(3,1fr);
+        }
+    }
+    .about{
+        padding-top: 60px;
+        &__inner{
+            display: block;
+        }
+        &__cards{
+            margin-left: 0;
+            margin-top: 20px;
+        }
+        &__content{
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+        &__content-inner{
+            width: 40%;
+        }
+        &__contacts{
+            flex-wrap: wrap;
+        }
+        &__contact{
+            width: 50%;
+        }
+        &__contact:not(:last-of-type){
+            margin-bottom: 15px;
+        }
+        &__contact-title{
+            margin-bottom: 0;
+        }
+        &__form{
+            margin-left: 10px;
+        }
+        &__form-inner{
+            padding: 40px 0 40px 40px;
+        }
+    }
+}
+@media (max-width:992px) {
+    .assortment{
+        &__cards-inner{
+            grid-template-columns: repeat(2,1fr);
+        }
+    }
+    .about{
+        &__content{
+            flex-direction: column;
+        }
+        &__content-inner{
+            width: 100%;
+        }
+        &__contacts{
+            justify-content: flex-start;
+        }
+        &__contact{
+            width: fit-content;
+            margin-right: 40px;
+        }
+        &__contact:not(:last-of-type){
+            margin-bottom: 0;
+        }
+        &__form{
+            margin-left: 0;
+        }
+    }
+}
+
+@media (max-width:768px) {
+    .assortment{
+        margin-top: 60px;
+        &__inner{
+            flex-direction: column;
+            margin-top: 30px;
+        }
+        &__catalog{
+            margin: 0 auto 20px;
+        }
+        &__list{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+        &__item{
+            padding: 10px;
+            font-size: 17px;
+            border: none;
+        }
+        &__item:nth-of-type(1),
+        &__item:nth-of-type(2){
+            border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+        }
+        &__item:nth-of-type(1),
+        &__item:nth-of-type(3){
+            border-right: 1px solid rgba(51, 51, 51, 0.3);
+        }
+    }
+    
+}
+@media (max-width:576px){
+    .assortment{
+        &__item{
+            padding: 6px;
+        }
+    }
+    .about{
+        &__form-image{
+            display: none;
+        }
+        &__contacts{
+            margin-top: 10px;
+        }
+        &__contact{
+            margin-left: 0;
+            margin-top: 20px;
+        }
+        &__cards-inner{
+            grid-template-columns: repeat(2,1fr);
+        }
+    }
+}
+@media (max-width:450px){
+    .assortment{
+        &__cards-inner{
+            display: block;
+
+        }
+        &__card{
+            width: 250px;
+            margin: 0 auto;
+        }
+        &__list{
+            display: block;
+        }
+        &__item:nth-of-type(1),
+        &__item:nth-of-type(2){
+            border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+        }
+        &__item:nth-of-type(1),
+        &__item:nth-of-type(3){
+            border-right: none;
+        }
+        &__item{
+            border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+        }
+
+
+    }
+    .about{
+        &__cards-inner{
+            grid-template-columns: repeat(1,1fr);
+        }
+    }
+}
