--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -146,7 +146,7 @@ textarea{
 }
 
 .container{
-  max-width: 80%;
+  max-width: 1440px;
   margin: 0 auto;
   position: relative;
   padding: 0 15px;
