--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -339,6 +339,10 @@
         &__form-image{
             display: none;
         }
+        &__form-inner{
+            padding: 40px;
+        }
+
         &__contacts{
             margin-top: 10px;
         }
