--- a/source/html/components/header.html
+++ b/source/html/components/header.html
@@ -38,17 +38,15 @@
                             <a href="blog.html" class="header__nav-link">Статьи</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">Видео</a>
+                            <a href="video.html" class="header__nav-link">Видео</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">О компании</a>
+                            <a href="about.html" class="header__nav-link">О компании</a>
                         </li>
                         <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">Контакты</a>
+                            <a href="contacts.html" class="header__nav-link">Контакты</a>
                         </li>
-                        <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">Калькулятор</a>
-                        </li>
+
                     </ul>
                 </div>
 
