--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,11 @@
 @import "blocks/blog.scss";
 @import "blocks/article.scss";
 @import "blocks/contacts.scss";
+@import "blocks/assortment.scss";
+@import "blocks/accordion.scss";
+@import "blocks/about.scss";
+@import "blocks/video.scss";
+
 
 
 
